--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "jsforce": "^1.10.1",
     "mongoose": "^5.11.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
